NAvbar dark mode issue resolved

--- a/Navbar.css
+++ b/Navbar.css
@@ -23,8 +23,6 @@
 
 .navbar-nav{
   margin-right: auto;
-  /* display: flex;
-  justify-content: center; */
 }
 
 #input_data{
